--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.0",
+    "file-saver": "^2.0.2",
+    "js-md5": "^0.7.3",
+    "moment": "^2.24.0",
+    "qs": "^6.9.3",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^3.0.1",
+    "xlsx": "^0.16.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -18,6 +27,7 @@
     "@vue/cli-plugin-typescript": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "script-loader": "^0.7.2",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
   },
